--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   },
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-contrib-cssmin": "^1.0.1",
     "grunt-contrib-htmlmin": "^1.1.0",
+    "grunt-contrib-uglify": "^1.0.1",
     "grunt-imageoptim": "^1.4.1",
     "grunt-inline": "^0.3.6",
     "load-grunt-tasks": "^3.4.1"
